--- a/src/index.html
+++ b/src/index.html
@@ -8,31 +8,31 @@
   </head>
   <body>
     <!-- Sidebar -->
-    <div class="flex h-screen bg-gray-200">
-      <div class="flex-none w-64 p-6 bg-white border-r">
-        <h1 class="text-2xl font-semibold text-gray-800">Dashboard</h1>
+    <div class="flex h-screen bg-white">
+      <div class="flex-none w-64 p-6 bg-indigo-900 border-r">
+        <h1 class="text-2xl font-semibold text-white">Dashboard</h1>
         <ul class="mt-6">
-          <li class="mb-4">
+          <li class="mb-1">
             <a
               href="#"
-              class="flex items-center text-gray-600 hover:text-gray-800"
+              class="flex items-center p-3 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
             >
               <span class="mr-2"><i class="fas fa-home"></i></span> Home
             </a>
           </li>
-          <li class="mb-4">
+          <li class="mb-1">
             <a
               href="#"
-              class="flex items-center text-gray-600 hover:text-gray-800"
+              class="flex items-center p-3 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
             >
               <span class="mr-2"><i class="fas fa-chart-bar"></i></span>
               Analytics
             </a>
           </li>
-          <li class="mb-4">
+          <li class="mb-1">
             <a
               href="#"
-              class="flex items-center text-gray-600 hover:text-gray-800"
+              class="flex items-center p-3 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
             >
               <span class="mr-2"><i class="fas fa-cogs"></i></span> Settings
             </a>
@@ -42,10 +42,33 @@
 
       <!-- Main Content -->
       <div class="flex-grow p-6">
-        <h1 class="text-2xl font-semibold text-gray-800">
+        <h1 class="text-2xl font-semibold text-gray-800 mb-4">
           Welcome to the Dashboard
         </h1>
-        <!-- Add your content here -->
+        <div class="grid grid-cols-4 gap-4 mb-4">
+          <div class="outline outline-1 outline-gray-200 p-3 rounded-sm">
+            01
+          </div>
+          <div class="outline outline-1 outline-gray-200 p-3 rounded-sm">
+            02
+          </div>
+          <div class="outline outline-1 outline-gray-200 p-3 rounded-sm">
+            03
+          </div>
+          <div class="outline outline-1 outline-gray-200 p-3 rounded-sm">
+            03
+          </div>
+        </div>
+        <div class="grid grid-cols-3 gap-4">
+          <div
+            class="col-span-2 outline outline-1 outline-gray-200 p-3 rounded-sm"
+          >
+            01
+          </div>
+          <div class="outline outline-1 outline-gray-200 p-3 rounded-sm">
+            02
+          </div>
+        </div>
       </div>
     </div>
   </body>
