--- a/src/forgotpass.html
+++ b/src/forgotpass.html
@@ -14,18 +14,19 @@
       <div class="absolute inset-0 bg-blue-900 opacity-95"></div>
       <div class="flex justify-center items-center h-screen relative">
         <div
-          class="w-[30%] p-5 shadow-2xl backdrop-blur-sm bg-white/25 outline outline-1 outline-gray-200 rounded-2xl"
+          class="w-[100%] mx-5 md:w-[30%] p-5 shadow-2xl backdrop-blur-sm bg-white/25 outline outline-1 outline-gray-200 rounded-2xl"
         >
+        <form action="#">
           <input
             type="text"
-            class="p-2 mb-2 block w-full outline outline-1 outline-gray-200 rounded-md bg-transparent"
+            class="p-2 mb-2 block w-full outline outline-1 outline-gray-200 rounded-md bg-transparent text-white"
             name="user_id"
             id=""
             placeholder="enter you staff id"
           />
           <input
             type="email"
-            class="p-2 mb-2 block w-full outline outline-1 outline-gray-200 rounded-md bg-transparent"
+            class="p-2 mb-2 block w-full outline outline-1 outline-gray-200 rounded-md bg-transparent text-white"
             name="email"
             id=""
             placeholder="enter your email"
@@ -42,6 +43,7 @@
             <a href="login.html" class="text-white"
               >Remembered you password? Sign In</a
             >
+        </form>
           </div>
         </div>
       </div>
