--- a/src/reset-password.html
+++ b/src/reset-password.html
@@ -18,29 +18,29 @@
         >
           <form>
             <input
-              type="text"
+              type="password"
               class="p-2 mb-2 block w-full outline outline-1 outline-gray-200 rounded-md bg-transparent text-white"
-              name="user_id"
+              name="new-password"
               id=""
-              placeholder="enter you staff id"
+              placeholder="enter new password"
             />
             <input
               type="password"
               class="p-2 mb-2 block w-full outline outline-1 outline-gray-200 rounded-md bg-transparent text-white"
-              name="password"
+              name="confirm-password"
               id=""
-              placeholder="enter password"
+              placeholder="confirm new password"
             />
+
             <button
               type="submit"
-              name="login"
+              name="reset-pass"
               class="p-2 mb-2 block w-full bg-blue-900 rounded-md text-white"
             >
-              Login
+              Reset
             </button>
-
             <div class="p-2">
-              <a href="forgotpass.html" class="text-white">Forgot password?</a>
+              <a href="login.html" class="text-white">Return to Login</a>
             </div>
           </form>
         </div>
