--- a/src/reset-password.html
+++ b/src/reset-password.html
@@ -16,6 +16,9 @@
         <div
           class="w-[100%] mx-5 md:w-[30%] p-5 shadow-2xl backdrop-blur-sm bg-white/25 outline outline-1 outline-gray-200 rounded-2xl"
         >
+          <div class="flex items-center justify-center p-5 mb-5">
+            <img src="images/police-logo.png" class="w-[40%] md:w-[20%]" />
+          </div>
           <form>
             <input
               type="password"
