--- a/src/login.html
+++ b/src/login.html
@@ -117,7 +117,7 @@
             var loginBtn = $("#login_btn");
             $.ajax({
               type: "POST",
-              url: "functions.php",
+              url: "backend/functions.php",
               data: formData,
               dataType: "json",
               beforeSend: function () {
