--- a/src/forms/add-officer.html
+++ b/src/forms/add-officer.html
@@ -4,12 +4,11 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link href="../../dist/output.css" rel="stylesheet" />
-      <title>Login</title>
     </head>
   </head>
   <body>
-    <form>
+    <h1 class="text-3xl font-semibold text-blue-900">Add Officer</h1>
+    <form method="post">
       <input
         type="text"
         name=""
@@ -50,6 +49,12 @@
         type="text"
         name=""
         placeholder="skills"
+        class="p-2 mb-2 block w-full outline outline-1 outline-gray-200 rounded-md"
+      />
+      <input
+        type="password"
+        name=""
+        placeholder="enter password"
         class="p-2 mb-2 block w-full outline outline-1 outline-gray-200 rounded-md"
       />
       <input
