--- a/src/login.html
+++ b/src/login.html
@@ -102,6 +102,8 @@
             password: $("#password").val(),
             login_btn: 1,
           };
+
+          // form validation
           if (formData.staff_id == "" && formData.password == "") {
             document.getElementById("staffErrorDiv").innerHTML =
               "Staff ID is required";
@@ -112,7 +114,7 @@
               "password is required";
           } else if (formData.staff_id == "") {
             document.getElementById("staffErrorDiv").innerHTML =
-              "Staff ID is required";
+              "Staff ID is required"; //form validation ends here
           } else {
             var loginBtn = $("#login_btn");
             $.ajax({
@@ -145,6 +147,9 @@
               },
               error: function (xhr, status, error) {
                 alert("request failed:", status, error);
+                loginBtn.removeClass("relative").html("Log In");
+                $("#staff_id").val("");
+                $("#password").val("");
               },
             });
           }
