--- a/src/tables/tasks-table.html
+++ b/src/tables/tasks-table.html
@@ -6,6 +6,10 @@
     <title>Task Table</title>
     <!-- Include jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"
+    />
   </head>
   <body>
     <div class="p-2">
@@ -33,8 +37,105 @@
       </div>
     </div>
 
+    <!-- Edit Task Modal -->
+    <div
+      id="editModal"
+      class="fixed inset-0 z-50 hidden overflow-auto bg-black bg-opacity-50"
+    >
+      <div class="flex items-center justify-center h-full">
+        <div class="bg-white p-8 w-96">
+          <h2 class="text-2xl font-semibold mb-4">Edit Task</h2>
+          <!-- Input fields for editing -->
+          <label for="editTaskName">Task Name:</label>
+          <input
+            type="text"
+            id="editTaskName"
+            class="w-full mb-4 p-2 border border-gray-300 rounded"
+          />
+          <label for="editOfficer">Officer:</label>
+          <input
+            type="text"
+            id="editOfficer"
+            class="w-full mb-4 p-2 border border-gray-300 rounded"
+          />
+          <!-- Add more input fields as needed -->
+
+          <!-- Save and Close buttons -->
+          <button
+            id="saveChanges"
+            class="px-4 py-2 bg-blue-500 text-white rounded-full mr-2"
+          >
+            Save Changes
+          </button>
+          <button
+            id="closeModal"
+            class="px-4 py-2 bg-gray-500 text-white rounded-full"
+          >
+            Close
+          </button>
+        </div>
+      </div>
+    </div>
+    <script
+      type="text/javascript"
+      src="
+  https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"
+    ></script>
     <script>
       $(document).ready(function () {
+        function deleteTask(taskId) {
+          console.log("Deleting task with ID:", taskId);
+          $.ajax({
+            type: "POST",
+            url: "backend/delete-task.php",
+            data: { taskId: taskId },
+            dataType: "json",
+            success: function (response) {
+              if (response.status == 200) {
+                updateTasks();
+              } else {
+                alert("Error deleting task: " + response.message);
+              }
+            },
+            error: function (xhr, status, error) {
+              alert("Request failed: " + error);
+            },
+          });
+        }
+
+        function openEditModal(task) {
+          // Populate modal input fields with task details for editing
+          $("#editTaskName").val(task.task);
+          $("#editOfficer").val(task.officer);
+          // Add similar lines for other input fields
+
+          // Show the modal
+          $("#editModal").removeClass("hidden");
+
+          // Add event listener for Save button
+          $("#saveChanges").on("click", function () {
+            // Implement your save changes logic here
+            console.log("Saving changes...");
+
+            // Close the modal
+            $("#editModal").addClass("hidden");
+
+            // Remove event listeners to avoid multiple bindings
+            $("#saveChanges").off("click");
+            $("#closeModal").off("click");
+          });
+
+          // Add event listener for Close button
+          $("#closeModal").on("click", function () {
+            // Close the modal without saving changes
+            $("#editModal").addClass("hidden");
+
+            // Remove event listeners to avoid multiple bindings
+            $("#saveChanges").off("click");
+            $("#closeModal").off("click");
+          });
+        }
+
         function populateTable(tasks) {
           var tbody = $("#tasksTable tbody");
           tbody.empty(); // Clear existing rows
@@ -80,15 +181,36 @@
               );
               row.append(
                 "<td class='px-6 py-4'>" +
-                  "<a href='#' class='px-4 py-1 text-sm text-blue-600 rounded-full'><i class='fas fa-pen' title='edit'></i></a> " +
-                  "<a href='#' class='px-4 py-1 text-sm text-red-500 rounded-full'><i class='fas fa-trash' title='delete'></i></a>" +
+                  "<a href='#' class='px-4 py-1 text-sm text-blue-600 rounded-full edit-task'><i class='fas fa-pen' title='edit'></i></a> " +
+                  "<a href='#' class='px-4 py-1 text-sm text-red-500 rounded-full delete-task' data-task-id='" +
+                  task.id +
+                  "'><i class='fas fa-trash' title='delete'></i></a>" +
                   "</td>"
               );
+
+              // Add event listener for the edit button
+              row.find(".edit-task").on("click", function () {
+                openEditModal(task);
+              });
 
               tbody.append(row);
             });
           }
         }
+
+        $("#tasksTable").on("click", ".edit-task", function () {
+          var rowIndex = $(this).closest("tr").index();
+          var task = tasks[rowIndex];
+          openEditModal(task);
+        });
+
+        // Use event delegation for the click event
+        $("#tasksTable").on("click", ".delete-task", function () {
+          var taskId = $(this).data("task-id");
+          if (confirm("Are you sure you want to delete this task?")) {
+            deleteTask(taskId);
+          }
+        });
 
         // Function to fetch and update tasks
         function updateTasks() {
@@ -101,7 +223,12 @@
               if (response.status == 200) {
                 populateTable(response.tasks);
               } else {
-                alert("Error: " + response.message);
+                tbody.append(
+                  "<tr><td colspan='5' class='text-center'>" +
+                    response.message +
+                    "</td></tr>"
+                );
+                // toastr.error("Error: " + response.message);
               }
             },
             error: function (xhr, status, error) {
