--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -12,16 +12,26 @@
   </head>
   <body>
     <!-- Sidebar -->
-    <div class="flex h-screen bg-white">
+    <div class="flex h-screen bg-gray-200">
       <div class="flex-none w-64 p-6 bg-indigo-900 border-r">
         <h1 class="text-2xl font-semibold text-white">GP-EDMS</h1>
         <ul class="mt-6">
           <li class="mb-1">
             <a
-              href="#"
+              href="dashboardContent.html"
               class="flex items-center p-3 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
             >
-              <span class="mr-2"><i class="fas fa-home"></i></span> Home
+              <span class="mr-2"><i class="fas fa-home"></i></span>
+              Home
+            </a>
+          </li>
+          <li class="mb-1">
+            <a
+              href="tasks.html"
+              class="flex items-center p-3 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
+            >
+              <span class="mr-2"><i class="fas fa-eye"></i></span>
+              View Tasks
             </a>
           </li>
           <li class="mb-1 group">
@@ -29,49 +39,10 @@
               href="#"
               class="flex items-center p-3 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
             >
-              <span class="mr-2"><i class="fas fa-list"></i></span> Task
-              Management
+              <span class="mr-2"><i class="fas fa-message"></i></span>
+              Chat
             </a>
-            <ul
-              class="ml-4 space-y-1 hidden group-hover:block transition-all duration-300 ease-in-out"
-            >
-              <li>
-                <a
-                  href="#"
-                  class="block px-4 py-2 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
-                >
-                  <span class="mr-2"><i class="fas fa-plus"></i></span>
-                  Add Task
-                </a>
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="block px-4 py-2 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
-                >
-                  <span class="mr-2"><i class="fas fa-pen-to-square"></i></span>
-                  Assign Task
-                </a>
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="block px-4 py-2 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
-                >
-                  <span class="mr-2"><i class="fas fa-eye"></i></span>
-                  View Tasks
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li class="mb-1 group">
-            <a
-              href="#"
-              class="flex items-center p-3 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
-            >
-              <span class="mr-2"><i class="fas fa-message"></i></span> Chat
-            </a>
-            <ul class="ml-4 space-y-1 hidden group-hover:block">
+            <ul class="ml-4 space-y-1 hidden :block">
               <li>
                 <a
                   href="#"
@@ -103,42 +74,26 @@
           </li>
           <li class="mb-1">
             <a
-              href="#"
+              href="notifications.html"
               class="flex items-center p-3 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
             >
-              <span class="mr-2"><i class="fas fa-chart-bar"></i></span>
-              Analytics
-            </a>
-          </li>
-          <li class="mb-1 group">
-            <a
-              href="#"
-              class="flex items-center p-3 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
-            >
-              <span class="mr-2"><i class="fas fa-cogs"></i></span> Settings
+              <span class="mr-2"><i class="fa-solid fa-bell"></i></span>
+              Notifications
             </a>
             <!-- Submenu for Settings -->
-            <ul class="ml-4 space-y-1 hidden group-hover:block">
-              <li>
-                <a
-                  href="#"
-                  class="block px-4 py-2 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
-                >
-                  <span class="mr-2"><i class="fas fa-user-cog"></i></span>
-                  User Settings
-                </a>
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="block px-4 py-2 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
-                >
-                  <span class="mr-2"><i class="fas fa-wrench"></i></span>
-                  System Settings
-                </a>
-              </li>
-            </ul>
           </li>
+
+          <li class="mb-1">
+            <a
+              href="profile.html"
+              class="flex items-center p-3 text-white hover:text-indigo-900 hover:bg-indigo-500 focus:bg-indigo-500 focus:text-white"
+            >
+              <span class="mr-2"><i class="fas fa-cogs"></i></span>
+              Profile
+            </a>
+            <!-- Submenu for Settings -->
+          </li>
+
           <li class="mb-1">
             <a
               href="#"
@@ -153,33 +108,104 @@
       <!-- sidebar ends here -->
 
       <!-- Main Content -->
-      <div class="flex-grow p-6">
-        <h1 class="text-2xl font-semibold text-gray-800 mb-4">Dashboard</h1>
-        <div class="grid grid-cols-4 gap-4 mb-4">
-          <div class="outline outline-1 outline-gray-200 p-3 rounded-sm">
-            01
-          </div>
-          <div class="outline outline-1 outline-gray-200 p-3 rounded-sm">
-            02
-          </div>
-          <div class="outline outline-1 outline-gray-200 p-3 rounded-sm">
-            03
-          </div>
-          <div class="outline outline-1 outline-gray-200 p-3 rounded-sm">
-            03
-          </div>
-        </div>
-        <div class="grid grid-cols-3 gap-4">
-          <div
-            class="col-span-2 outline outline-1 outline-gray-200 p-3 rounded-sm"
-          >
-            01
-          </div>
-          <div class="outline outline-1 outline-gray-200 p-3 rounded-sm">
-            02
-          </div>
-        </div>
-      </div>
+      <div class="w-full h-ful" id="content"></div>
     </div>
+
+    <script>
+      // Get the "Chat" link and its submenu
+      const chatLink = document.querySelector('.group:nth-child(3) > a')
+      const chatSubMenu = document.querySelector('.group:nth-child(3) > ul')
+
+      // Add a click event listener to the "Chat" link
+      chatLink.addEventListener('click', function (event) {
+        event.preventDefault() // Prevent the default behavior of the link
+
+        // Toggle the visibility of the submenu by adding/removing the 'hidden' class
+        chatSubMenu.classList.toggle('hidden')
+      })
+      // Function to load content from dashboardContent.html
+      function loadDashboardContent() {
+        fetch('dashboardContent.html') // Fetch the content of dashboardContent.html
+          .then((response) => response.text()) // Get the response as text
+          .then((data) => {
+            // Insert the retrieved content into the 'content' div
+            document.getElementById('content').innerHTML = data
+          })
+          .catch((error) => {
+            console.error('Error fetching dashboard content:', error)
+          })
+      }
+
+      // Get the "Home" link
+      const homeLink = document.querySelector('a[href="dashboardContent.html"]')
+
+      // Add a click event listener to the "Home" link
+      homeLink.addEventListener('click', function (event) {
+        event.preventDefault() // Prevent the default behavior of the link
+        loadDashboardContent() // Load the dashboard content
+      })
+
+      function loadDTask() {
+        fetch('tasks.html') // Fetch the content of tasks.html
+          .then((response) => response.text()) // Get the response as text
+          .then((data) => {
+            // Insert the retrieved content into the 'content' div
+            document.getElementById('content').innerHTML = data
+          })
+          .catch((error) => {
+            console.error('Error fetching new chat content:', error)
+          })
+      }
+
+      const tasksLink = document.querySelector('a[href="tasks.html"]')
+
+      // Add a click event listener to the "Task" link
+      tasksLink.addEventListener('click', function (event) {
+        event.preventDefault() // Prevent the default behavior of the link
+        loadDTask() // Load the tasks
+      })
+
+      function loadDNotifications() {
+        fetch('notifications.html') // Fetch the content of notifications.html
+          .then((response) => response.text()) // Get the response as text
+          .then((data) => {
+            // Insert the retrieved content into the 'content' div
+            document.getElementById('content').innerHTML = data
+          })
+          .catch((error) => {
+            console.error('Error fetching new chat content:', error)
+          })
+      }
+
+      const notificationsLink = document.querySelector(
+        'a[href="notifications.html"]',
+      )
+
+      // Add a click event listener to the "Task" link
+      notificationsLink.addEventListener('click', function (event) {
+        event.preventDefault() // Prevent the default behavior of the link
+        loadDNotifications() // Load the notifications
+      })
+
+      function loadDProfile() {
+        fetch('profile.html') // Fetch the content of notifications.html
+          .then((response) => response.text()) // Get the response as text
+          .then((data) => {
+            // Insert the retrieved content into the 'content' div
+            document.getElementById('content').innerHTML = data
+          })
+          .catch((error) => {
+            console.error('Error fetching new chat content:', error)
+          })
+      }
+
+      const profileLink = document.querySelector('a[href="profile.html"]')
+
+      // Add a click event listener to the "profile" link
+      profileLink.addEventListener('click', function (event) {
+        event.preventDefault() // Prevent the default behavior of the link
+        loadDProfile() // Load the Profile
+      })
+    </script>
   </body>
 </html>
